--- a/notificationHome.css
+++ b/notificationHome.css
@@ -91,7 +91,7 @@ h1 {
     color: rgba(0, 0, 0, 0.8)
 }
 
-.bookingTitle {
+.requestTitle {
     font-size: 1rem;
     font-weight: 400;
     margin: 0 0 0.33rem 0;
@@ -217,6 +217,11 @@ main {
     border-radius: 0.5rem;
     box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
     margin-right: 0.5rem;
+}
+
+.notificationCardHome {
+    width: 234px;
+    margin: 0 0.5rem 0.125rem 0;
 }
 
 .notificationViewMore {
