--- a/assets/css/onboarding.css
+++ b/assets/css/onboarding.css
@@ -6,12 +6,14 @@ body {
   font-family: "SF Pro Display";
   margin: 0;
 }
+
 .mySlides {
   display: none;
 }
+
 img {
+  width: 100%;
   vertical-align: middle;
-  margin-top: 2rem;
 }
 
 /* Slideshow container */
@@ -41,6 +43,7 @@ img {
 .prev {
   left: 0;
 }
+
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
@@ -126,21 +129,23 @@ p {
   font-size: 16px;
 }
 
-/* sign in button */
-button {
-  margin-left: 1rem;
-  margin-right: 1rem;
-  width: 343px;
-  height: 40px;
-  color: white;
-  border-radius: 25px;
-  background-color: black;
-  margin-top: 88px;
+.firstbutton {
+  margin: 0 auto;
+  width: calc(100% - 2rem);
 }
 
-.tenexform #btn {
+/* sign in button */
+button {
+  width: 100%;
+  padding: 0.5rem 0;
+  color: white;
+  border-radius: 1.5rem;
+  background-color: black;
+  margin-top: 5rem;
+}
+
+.tenexform #btn, .tenexform #signInBtn {
   margin-top: 3rem;
-  margin-bottom: 2rem;
 }
 
 .slideshow-container {
@@ -154,6 +159,8 @@ button {
 
 .tenexform {
   text-align: center;
+  width: 100%;
+  padding: 1rem;
 }
 
 form {
@@ -161,30 +168,26 @@ form {
   flex-flow: column nowrap;
   gap: 1rem;
   align-items: center;
-  margin-top: 72px;
+  margin-top: 5rem;
+  width: 100%;
 }
 
-input {
-  border-radius: 25px;
-  padding: 0.5rem 8rem 0.5rem 1rem;
-  margin-left: 1rem;
-  width: 343px;
-  height: 40px;
+#loginForm input {
+  border-radius: 1.5rem;
+  padding: 0.5rem 1rem;
+  width: 100%;
 }
+
 .tenexform p:nth-of-type(1) {
-  text-align: right !important;
+  text-align: center;
   font-weight: 400;
-  font-size: 12px;
-  margin-right: 2rem;
+  font-size: 0.8rem;
 }
+.tenexform p:nth-of-type(2) {
+  margin-top: 2rem;
+}
+
 .tenexform p:nth-of-type(3) {
   text-decoration: underline;
 }
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 700px) {
-  .prev,
-  .next,
-  .text {
-    font-size: 11px;
-  }
-}
+
