--- a/notificationHome.css
+++ b/notificationHome.css
@@ -8,6 +8,53 @@
 
 /* Text-level Semantics
    ========================================================================= */
+/* navigation bottom styling */
+.app-nav {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    width: 100%;
+    height: 3.5rem;
+    background-color: #454545;
+}
+
+.app-nav .nav {
+    height: 100%;
+}
+.app-nav .nav ul {
+    height: 100%;
+    display: flex;
+    flex-flow: row nowrap;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 0;
+    margin: 0;
+}
+.app-nav .nav ul li {
+    list-style-type: none;
+}
+
+.app-nav .nav ul li button {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-size: 0.6rem;
+    color: white;
+    background: none;
+    border: 0;
+}
+
+.app-nav .nav ul li button:active {
+    outline: 0;
+}
+
+.app-nav .nav ul li button svg {
+    margin-bottom: 0.3rem;
+}
+
+/* navigation bottom styling end */
 
 h1 {
     font-size: 1.5rem;
