--- a/notificationArchive.css
+++ b/notificationArchive.css
@@ -21,7 +21,6 @@ h2 {
     font-size: 1rem;
     font-weight: 600;
     color: rgba(0, 0, 0, 0.45);
-    padding: 0 1rem;
     margin: 1.25rem 0;
     text-transform: uppercase;
 }
@@ -33,6 +32,8 @@ h3 {
     padding: 0 1rem;
     margin: 0.75rem 0;
 }
+
+
 
 .notificationCardTitle, .notificationCard h2 {
     font-size: 1rem;
@@ -59,7 +60,7 @@ h3 {
     font-weight: 300;
     white-space: normal;
     overflow: hidden;
-    /* text-overflow: ellipsis; */
+    text-overflow: ellipsis;
     display: -webkit-box;
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
