--- a/assets/css/notificationHome.css
+++ b/assets/css/notificationHome.css
@@ -2,243 +2,292 @@
    ========================================================================= */
 
 * {
-    font-family: "roboto", sans-serif;
-    box-sizing: border-box;
+  font-family: "roboto", sans-serif;
+  box-sizing: border-box;
 }
 
 /* Text-level Semantics
    ========================================================================= */
 
+/* ----- Alert scroll ----- */
+.alerts_wrapper {
+  overflow: auto;
+  white-space: nowrap;
+  margin-top: 0.5rem;
+}
+
+.alertCard {
+  display: inline-block;
+  vertical-align: top;
+  background-color: #ddd;
+  width: 18rem;
+  height: 5.5rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.alertCard:not(:last-of-type) {
+  margin-right: 0.25rem;
+}
+
+.alertCard h2,
+.alertCard p {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.alertCard p {
+  margin: 0.3rem 0;
+  font-size: 0.8rem;
+}
+
+.view_more_alert {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.view_more_alert a {
+  text-decoration: none;
+  color: #000;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.notification_home_header {
+  position: sticky;
+  top: 0;
+  padding: 3rem 1rem 1rem;
+  display: flex;
+  flex-direction: column;
+  background-color: #f4f4f4;
+  border-bottom: 1px solid #bdbdbd;
+  box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
+}
+
+header h1 {
+  margin: 0;
+}
+
+h2 {
+  margin: 0;
+}
+
+/* Alert scroll end */
+
+/* ----- Notif scroll ----- */
+.notifications_wrapper {
+  overflow: auto;
+  white-space: nowrap;
+  margin-top: 0.5rem;
+}
+
+.notificationCard {
+  display: inline-block;
+  vertical-align: top;
+  background-color: white;
+  width: 15rem;
+  height: 8.5rem;
+  padding: 1rem;
+  border-radius: 0.5rem;
+}
+
+.notificationCard:not(:last-of-type) {
+  margin-right: 0.25rem;
+}
+
+.notificationCard h2,
+.notificationCard p {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+.notificationCard p.notificationExerpt {
+  font-size: 0.875rem;
+  font-weight: 300;
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  max-height: 2.5rem;
+  line-height: 1.5;
+}
+
+.notificationCard p {
+  margin: 0.3rem 0;
+  font-size: 0.8rem;
+}
+
+.view_more_notification {
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  white-space: normal;
+  text-align: center;
+}
+
+.view_more_notification a {
+  text-decoration: none;
+  color: #000;
+  font-size: 1.3rem;
+  font-weight: bold;
+}
+
+.notificationSection {
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  background-color: #f4f4f4;
+  border-bottom: 1px solid #bdbdbd;
+}
+
+header h1 {
+  margin: 0;
+}
+
+main {
+  min-height: 100vh;
+  margin-bottom: 2.5rem;
+}
+
+h2 {
+  margin: 0;
+}
+
+/* Notif scroll */
+
+/* navigation bottom styling */
+.app-nav {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  height: 3.5rem;
+  background-color: #454545;
+}
+
+.app-nav .nav {
+  height: 100%;
+}
+.app-nav .nav ul {
+  height: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0;
+  margin: 0;
+}
+.app-nav .nav ul li {
+  list-style-type: none;
+}
+
+.app-nav .nav ul li button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.6rem;
+  color: white;
+  background: none;
+  border: 0;
+}
+
+.app-nav .nav ul li button:active {
+  outline: 0;
+}
+
+.app-nav .nav ul li button svg {
+  margin-bottom: 0.3rem;
+}
+
+/* navigation bottom styling end */
+
 h1 {
-    font-size: 1.5rem;
-    font-weight: 500;
-    color: #4F4F4F;
-    padding: 0;
-    margin-top: 1.125rem;
-    margin-bottom: 0.5rem;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #4f4f4f;
+  padding: 0;
+  margin: 0;
 }
 
-.scrollHeaderTitle {
-    padding-left: 1rem;
-    margin-top: 2rem;
-}
-
-.alertCardTitle {
-    font-size: 1rem;
-    font-weight: 400;
-    margin: 0 0 0.33rem 0;
-    color: white;
-    white-space: normal;
-    -webkit-line-clamp: 1;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-}
-
-.alertPostedDate {
-    font-size: 14px;
-    font-weight: 300;
-    margin: 0.25rem 0;
-    color: rgba(255, 255, 255, 0.5);
-}
-
-.alertExerpt {
-    font-size: 14px;
-    font-weight: 300;
-    margin: 0;
-    color: rgba(255, 255, 255, 0.8);
-    white-space: normal;
-    -webkit-line-clamp: 1;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    line-height: 1.5;
-    
-}
-
-.notificationCardTitle {
-    font-size: 1rem;
-    font-weight: 400;
-    margin: 0 0 0.33rem 0;
-    color: #4F4F4F;
-    /* white-space: normal;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 1;
-    -webkit-box-orient: vertical; */
-}
-
-.notificationDuration {
-    font-size: 0.875rem;
-    font-weight: 300;
-    margin: 0 0 0.33rem 0;
-    color: rgba(0, 0, 0, 0.5);
-}
-
-.notificationExerpt {
-    font-size: 0.875rem;
-    font-weight: 300;
-    white-space: normal;
-    overflow: hidden;
-    /* text-overflow: ellipsis; */
-    display: -webkit-box;
-    -webkit-line-clamp: 3;
-    -webkit-box-orient: vertical;
-    max-height: 4.5rem;
-    line-height: 1.5;
-    margin: 0;
-    color: rgba(0, 0, 0, 0.8)
-}
-
-.bookingTitle {
-    font-size: 1rem;
-    font-weight: 400;
-    margin: 0 0 0.33rem 0;
-    color: #4F4F4F;
+.alertCardTitle, .notificationCardTitle, .requestTitle {
+  font-size: 1rem;
+  font-weight: 400;
+  margin: 0 0 0.33rem 0;
+  color: #4f4f4f;
 }
 
 .newRequestDate {
-    font-size: 0.875rem;
-    font-weight: 300;
-    margin: 0 0 0.33rem 0;
-    color: rgba(0, 0, 0, 0.4)
+  font-size: 0.875rem;
+  font-weight: 300;
+  margin: 0 0 0.33rem 0;
+  color: rgba(0, 0, 0, 0.4);
 }
 
 .newRequestExerpt {
-    font-size: 0.875rem;
-    font-weight: 300;
-    white-space: normal;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-    -webkit-box-orient: vertical;
-    max-height: 2.5rem;
-    line-height: 1.5;
-    margin: 0;
-    color: rgba(0, 0, 0, 0.8)
+  font-size: 0.875rem;
+  font-weight: 300;
+  white-space: normal;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  max-height: 2.5rem;
+  line-height: 1.5;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.8);
 }
 
 .newRequestStatus {
-    font-size: 0.875rem;
-    font-weight: 600;
-    margin: 0 0 0.33rem 0;
-    color: rgba(0, 0, 0, 0.4)
+  font-size: 0.875rem;
+  font-weight: 600;
+  margin: 0 0 0.33rem 0;
+  color: rgba(0, 0, 0, 0.4);
 }
 
 .bookingDate {
-    font-size: 0.875rem;
-    font-weight: 300;
-    margin: 0 0 0.33rem 0;
-    color: rgba(0, 0, 0, 0.4)
+  font-size: 0.875rem;
+  font-weight: 300;
+  margin: 0 0 0.33rem 0;
+  color: rgba(0, 0, 0, 0.4);
 }
 
 .bookingTime {
-    font-size: 0.875rem;
-    font-weight: 300;
-    margin: 0;
-    color: rgba(0, 0, 0, 0.4)
+  font-size: 0.875rem;
+  font-weight: 300;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.4);
 }
-
-
 
 /* Grouping Content
    ========================================================================= */
 
 body {
-    background-color: #E8E8E8;
-    /* max-width: 375px; */
-    margin: 0;
-}
-
-.alertSection {
-    background-color: #f4f4f4;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    /* padding: 1rem 1rem 0 1rem; */
-    box-shadow: 0 3px 3px rgba(0, 0, 0, 0.06);
-}
-
-main {
-    margin: 0;
-    /* display: none; */
-}
-
-.alertCard {
-    width: 18rem;
-    height: 100%;
-    background-color: #4F4F4F;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    /* box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12); */
-    /* margin-right: 0.5rem; */
-    display: inline-block;
-    text-align: center;
-}
-/* 
-.alertViewMore {
-    align-self: center;
-    padding-right: 1rem;
-} */
-
-.alertViewMore {
-    text-decoration: none;
-    width: 100%;
-    color: white;
-}
-
-.horizontalScroll {
-    background-color: cyan;
-    padding: 1rem;
-    overflow-x: scroll;
-    white-space: nowrap;
-}
-
-
-.notificationSection {
-    padding-top: 13rem;
-}
-
-.notificationCard {
-    background-color: white;
-    width: 234px;
-    padding: 1rem;
-    margin-bottom: 0.125rem;
-    border-radius: 0.5rem;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
-    margin-right: 0.5rem;
-}
-
-.notificationViewMore {
-    align-self: center;
-    padding-right: 1rem;
-}
-
-.notificationViewMoreButton {
-    width: 214px;
-    height: 170px;
-    background-color:white;
-    border-radius: 0.5rem;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
-    border-radius: 0.5rem;
-    align-self: center;
-    border: none;
-    color: #4F4F4F;
-    font-size: 1rem;
-    white-space: normal;
+  background-color: #e8e8e8;
+  /* max-width: 375px; */
+  margin: 0;
 }
 
 .requestUpdates {
-    margin: 0 1rem;
+  margin: 1rem;
+  padding-bottom: 2rem;
 }
 
 .newRequestCard {
-    background-color: white;
-    width: 100%;
-    margin-bottom: 0.5rem;
-    padding: 1rem;
-    border-radius: 0.5rem;
-    box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
-    margin-right: 0.5rem;
+  background-color: white;
+  width: 100%;
+  margin: 0.5rem 0;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+  margin-right: 0.5rem;
 }
