--- a/assets/css/calendar.css
+++ b/assets/css/calendar.css
@@ -1,4 +1,5 @@
 * {
+  font-family: "roboto", sans-serif;
   box-sizing: border-box;
 }
 
@@ -22,8 +23,17 @@ header {
   color: #bdbdbd;
 }
 
-header h1 {
+.calendar_header {
   margin: 0;
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #4f4f4f;
+  padding: 0;
+}
+
+#calendarDate {
+  padding: 0.5rem;
+  width: 100%;
 }
 
 /* navigation bottom styling start */
@@ -59,7 +69,7 @@ header h1 {
   justify-content: center;
   align-items: center;
   font-size: 0.6rem;
-  color: white;
+  color: #848484;
   background: none;
   border: 0;
 }
@@ -75,6 +85,7 @@ header h1 {
 /* navigation bottom styling end */
 
 main {
+  padding-top: 1rem;
   padding-bottom: 10rem;
   background: #eee;
 }
@@ -82,11 +93,11 @@ main {
 .date_select_wrapper {
   padding: 1rem;
   background: white;
-  border-bottom: 1px solid black;
+  /* border-bottom: 1px solid black; */
 }
 
 .selected_date_cards_wrapper {
-  margin: 1rem 1rem;
+  margin: 0 1rem 1rem;
 }
 
 .requestUpdates {
@@ -94,10 +105,13 @@ main {
   padding-bottom: 2rem;
 }
 
+.newRequestCard:not(:first-of-type) {
+  margin: 0.5rem 0;
+}
 .newRequestCard {
   background-color: white;
   width: 100%;
-  margin: 0.5rem 0;
+  /* margin: 0.5rem 0; */
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
