--- a/assets/css/more.css
+++ b/assets/css/more.css
@@ -15,8 +15,16 @@ header{
     z-index: 10;
     padding: 2rem 1rem 1rem 1rem;
  }
+
+ .headerTitle {
+     margin-bottom: 0;
+     font-size: 1.5rem;
+    font-weight: 500;
+    color: #4f4f4f;
+    padding: 0;
+ }
  main{
-    padding: 10rem .5rem 2.5rem .5rem;
+    padding: 7rem .5rem 2.5rem .5rem;
     margin: auto;
 }
 .topHeader {
@@ -65,11 +73,12 @@ box-shadow: 0 3px 3px rgb(0 0 0 / 12%);
      color: gray;
  }
 
-#btn{
+#signout_btn{
     background-color: #454545;
      border-radius: 25px;
      box-shadow: 2px 2px 4px rgb(0 0 0 / 12%);
-     padding: .5rem 8rem .5rem 8rem;
+     padding: .5rem 1rem;
+     width: calc(100% - 1rem);
      border-color: transparent;
      margin-bottom: 4rem;
      color: white;
@@ -113,7 +122,7 @@ box-shadow: 0 3px 3px rgb(0 0 0 / 12%);
     justify-content: center;
     align-items: center;
     font-size: 0.6rem;
-    color: white;
+    color: #848484;
     background: none;
     border: 0;
 }
