--- a/assets/css/newRequestBooking.css
+++ b/assets/css/newRequestBooking.css
@@ -18,8 +18,20 @@ header {
     border-bottom: 1px solid #BDBDBD;
 }
 
+button {
+    border: none;
+    background: transparent;
+}
+
+button:active, button:focus {
+    outline: none;
+}
+
 .back_btn {
-    color: #BDBDBD;
+    width: 40px;
+    height: 40px;
+    background-color: rgba(0, 0, 0, 0);
+    grid-row: 1/1;
 }
 
 header h1 {
