--- a/assets/css/newRequestRequest.css
+++ b/assets/css/newRequestRequest.css
@@ -18,8 +18,20 @@ header {
   border-bottom: 1px solid #bdbdbd;
 }
 
+button {
+  border: none;
+  background: transparent;
+}
+
+button:active, button:focus {
+  outline: none;
+}
+
 .back_btn {
-  color: #bdbdbd;
+  width: 40px;
+  height: 40px;
+  background-color: rgba(0, 0, 0, 0);
+  grid-row: 1/1;
 }
 
 header h1 {
