Calendar page sort cards based on date selected and tap on notif card to view full. Req and book card detail view not done.

--- a/assets/css/notificationHome.css
+++ b/assets/css/notificationHome.css
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+/******************************************************************************
+      Homepage style starts here
+******************************************************************************/
+
 /* Text-level Semantics
    ========================================================================= */
 
@@ -24,6 +28,14 @@
   height: 5.5rem;
   padding: 1rem;
   border-radius: 0.5rem;
+}
+
+.alertCard:first-of-type {
+  margin-left: 1rem;
+}
+
+.alertCard:last-of-type {
+  margin-right: 1rem;
 }
 
 .alertCard:not(:last-of-type) {
@@ -59,7 +71,7 @@
 .notification_home_header {
   position: sticky;
   top: 0;
-  padding: 3rem 1rem 1rem;
+  padding: 3rem 0 1rem;
   display: flex;
   flex-direction: column;
   background-color: #f4f4f4;
@@ -67,8 +79,8 @@
   box-shadow: 0 0 4px 2px rgba(0, 0, 0, 0.2);
 }
 
-header h1 {
-  margin: 0;
+.notification_home_header h1 {
+  margin: 0 0 0 1rem;
 }
 
 h2 {
@@ -94,6 +106,14 @@ h2 {
   padding: 1rem;
   border-radius: 0.5rem;
   box-shadow: 1px 1px 4px 1px rgba(0, 0, 0, 0.1);
+}
+
+.notificationCard:first-of-type {
+  margin-left: 1rem;
+}
+
+.notificationCard:last-of-type {
+  margin-right: 1rem;
 }
 
 .notificationCard:not(:last-of-type) {
@@ -142,15 +162,15 @@ h2 {
 }
 
 .notificationSection {
-  padding: 1rem;
+  padding: 1rem 0;
   display: flex;
   flex-direction: column;
   background-color: #f4f4f4;
   border-bottom: 1px solid #bdbdbd;
 }
 
-header h1 {
-  margin: 0;
+.notificationSection h1 {
+  margin: 0 0 0 1rem;
 }
 
 main {
@@ -212,14 +232,12 @@ h2 {
 
 /* navigation bottom styling end */
 
-
 /* New request button styling */
 #newRequest_btn {
   position: fixed;
   bottom: 3.5rem;
   right: 0;
 }
-
 
 /* New request booking popup styling */
 
@@ -261,12 +279,12 @@ h2 {
   background-color: #444;
 }
 
-
 .show_popup {
   display: flex;
 }
 
-button:active, button:focus {
+button:active,
+button:focus {
   outline: none;
 }
 
@@ -278,7 +296,8 @@ h1 {
   margin: 0;
 }
 
-.alertCardTitle, .notificationCardTitle, .requestTitle {
+.notificationCardTitle,
+.requestTitle {
   font-size: 1rem;
   font-weight: 400;
   margin: 0 0 0.33rem 0;
@@ -351,3 +370,199 @@ body {
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
   margin-right: 0.5rem;
 }
+
+/* Hide element */
+.hide_container {
+  display: none;
+}
+
+/******************************************************************************
+      Homepage style ends here
+******************************************************************************/
+
+/******************************************************************************
+      Alert Detail view style starts here
+******************************************************************************/
+
+/* Text-level Semantics
+   ========================================================================= */
+
+#alertDetailHeader h1 {
+  font-size: 1.5rem;
+  font-weight: 500;
+  color: #4f4f4f;
+  padding: 0;
+  margin: 1rem 0;
+}
+
+#alertDetailHeader .headerTitle {
+  margin: 0;
+}
+
+.alertDetailCardTitle {
+  font-size: 1rem;
+  font-weight: 600;
+  margin: 0 0 0.33rem 0;
+  padding: 0;
+  color: white;
+  text-transform: uppercase;
+}
+
+.alertDetailPostedDate {
+  font-size: 0.875rem;
+  font-weight: 300;
+  margin: 0 0 0.33rem 0;
+  color: rgba(255, 255, 255, 0.5);
+}
+
+.alertDetailDescription {
+  font-size: 0.875rem;
+  font-weight: 300;
+  line-height: 1.5;
+  margin: 0;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+/* Embedded Content
+   ========================================================================= */
+
+/* Grouping Content
+   ========================================================================= */
+
+#alertDetailHeader {
+  background-color: #f4f4f4;
+  width: 100%;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.06);
+  position: fixed;
+  top: 0;
+  padding: 2rem 1rem 1rem 1rem;
+}
+
+.topHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.25rem 0;
+}
+
+button {
+  border: none;
+}
+
+button svg {
+  display: flex;
+  margin: auto;
+}
+
+svg {
+  margin: auto;
+}
+
+.search_btn {
+  width: 40px;
+  height: 40px;
+  border-radius: 40px;
+  border: 1px solid rgba(170, 170, 170, 0.25);
+  background-color: white;
+}
+
+.back_btn {
+  width: 40px;
+  height: 40px;
+  background-color: rgba(0, 0, 0, 0);
+  grid-row: 1/1;
+}
+
+.detailCardSection {
+  margin: 7.5rem 1rem 0 1rem;
+}
+
+.alertDetailCard {
+  background-color: #4f4f4f;
+  width: 100%;
+  padding: 1rem;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+  margin: 0.5rem 0;
+}
+
+.hidden {
+  display: none;
+}
+
+.visuallyHidden {
+  visibility: hidden;
+}
+
+/******************************************************************************
+      Alert Detail view style ends here
+******************************************************************************/
+
+/******************************************************************************
+      Notification Detail view style starts here
+******************************************************************************/
+
+.notifDetailCardTitle {
+  font-size: 1rem;
+  font-weight: 400;
+  padding: 0;
+  margin: 0 0 0.33rem 0;
+  color: #4f4f4f;
+  text-transform: uppercase;
+}
+
+.notifDetailPostedDate {
+  font-size: 0.875rem;
+  font-weight: 300;
+  margin: 0 0 0.33rem 0;
+}
+
+.notifDetailDuration {
+  font-size: 0.875rem;
+  font-weight: 300;
+  margin: 0 0 0.33rem 0;
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.notifDetaildescription {
+  font-size: 0.875rem;
+  font-weight: 300;
+  line-height: 1.5;
+  margin: 0;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+/* Embedded Content
+ ========================================================================= */
+
+/* Grouping Content
+ ========================================================================= */
+
+#notifDetailHeader {
+  background-color: #f4f4f4;
+  width: 100%;
+  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.06);
+  position: fixed;
+  top: 0;
+  padding: 2rem 1rem 1rem 1rem;
+}
+
+#notifDetailHeader .topHeader {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 0.25rem 0;
+}
+
+.notifDetailCard {
+  background-color: white;
+  width: 100%;
+  padding: 1rem;
+  margin: 0.5rem 0;
+  border-radius: 0.5rem;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.12);
+}
+
+/******************************************************************************
+      Notification Detail view style ends here
+******************************************************************************/
